--- a/plugin.yml
+++ b/plugin.yml
@@ -10,6 +10,11 @@ commands:
       usage: /quartz
       permission: QCC.quartz
       permission-message: Unknown Command. Type "help" for help.
+   test:
+      description: Test command, set to test whatever.
+      usage: /test
+      permission: QCC.dev.test
+      permission-message: Unknown Command. Type "help" for help.
    m:
       description: Switches player gamemode between 0 and 1.
       usage: /m
@@ -21,4 +26,13 @@ commands:
       permission: QCC.list
       permission-message: Unknown Command. Type "help" for help.
       alias: who
-
+   go:
+      description: Teleports you to a player.
+      usage: /go
+      permission: QCC.go
+      permission-message: Unknown Command. Type "help" for help.
+   get:
+      description: Teleports a player to you.
+      usage: /get
+      permission: QCC.get
+      permission-message: Unknown Command. Type "help" for help.
