Changed package names
Changed from uk.co.quartzcraft.* to uk.co.quartzcraft.core.*

--- a/plugin.yml
+++ b/plugin.yml
@@ -2,7 +2,7 @@ name: QuartzCore
 version: 1.6.4
 author: The QuartzCraft Team! SoulPunisher, mba2012 and nfell2009!
 website: http://www.quartzcraft.co.uk/
-main: uk.co.quartzcraft.QuartzCore
+main: uk.co.quartzcraft.core.QuartzCore
 
 commands:
    quartz:
