--- a/plugin.yml
+++ b/plugin.yml
@@ -9,35 +9,42 @@ commands:
       description: Runs quick checks.
       usage: /quartz
       permission: QCC.quartz
+      default: op
       permission-message: Unknown Command. Type "help" for help.
    test:
       description: Test command, set to test whatever.
       usage: /test
       permission: QCC.dev.test
+      default: op
       permission-message: Unknown Command. Type "help" for help.
    m:
       description: Switches player gamemode between 0 and 1.
       usage: /m
       permission: QCC.admin.m
+      default: op
       permission-message: Unknown Command. Type "help" for help.
    go:
       description: Teleports you to a player.
       usage: /go
       permission: QCC.go
+      default: op
       permission-message: Unknown Command. Type "help" for help.
    get:
       description: Teleports a player to you.
       usage: /get
       permission: QCC.get
+      default: op
       permission-message: Unknown Command. Type "help" for help.
    chat:
       description: Basic chat command
       usage: /chat
       permission: QCC.chat
+      default: op
       permission-message: Unknown Command. Type "help" for help.
       alias: ch
    report:
       description: Report a rule breaker
       usage: /report
       permission: QCC.report
+      default: op
       permission-message: Unknown Command. Type "help" for help.
