--- a/plugin.yml
+++ b/plugin.yml
@@ -10,50 +10,50 @@ commands:
       usage: /quartz
       permission: QCC.quartz
       default: op
-      permission-message: Unknown Command. Type "help" for help.
+      permission-message: Unknown Command. Visit the QuartzCraft Wiki for help.
    test:
       description: Test command, set to test whatever.
       usage: /test
       permission: QCC.dev.test
       default: op
-      permission-message: Unknown Command. Type "help" for help.
+      permission-message: Unknown Command. Visit the QuartzCraft Wiki for help.
    m:
       description: Switches player gamemode between 0 and 1.
       usage: /m
       permission: QCC.admin.m
       default: op
-      permission-message: Unknown Command. Type "help" for help.
+      permission-message: Unknown Command. Visit the QuartzCraft Wiki for help.
    go:
       description: Teleports you to a player.
       usage: /go
       permission: QCC.go
       default: op
-      permission-message: Unknown Command. Type "help" for help.
+      permission-message: Unknown Command. Visit the QuartzCraft Wiki for help.
    get:
       description: Teleports a player to you.
       usage: /get
       permission: QCC.get
       default: op
-      permission-message: Unknown Command. Type "help" for help.
+      permission-message: Unknown Command. Visit the QuartzCraft Wiki for help.
    chat:
       description: Basic chat command
       usage: /chat
       permission: QCC.chat
       default: op
-      permission-message: Unknown Command. Type "help" for help.
+      permission-message: Unknown Command. Visit the QuartzCraft Wiki for help.
       alias: ch
    report:
       description: Report a rule breaker
       usage: /report
       permission: QCC.report
       default: op
-      permission-message: Unknown Command. Type "help" for help.
+      permission-message: Unknown Command. Visit the QuartzCraft Wiki for help.
    promo:
       description: Main promo command
       usage: /promo
       permission: QCC.promo
       default: op
-      permission-message: Unknown Command. Type "help" for help.
+      permission-message: Unknown Command. Visit the QuartzCraft Wiki for help.
 Permissions:
    QCC.chat.*:
       description: Allows access to all QCC chat permissions.
