--- a/plugin.yml
+++ b/plugin.yml
@@ -54,6 +54,12 @@ commands:
       permission: QCC.promo
       default: op
       permission-message: Unknown Command. Visit the QuartzCraft Wiki for help.
+   qplayer:
+      description: Player manipulation command
+      usage: /qplayer
+      permission: QCC.admin.qplayer
+      default: op
+      permission-message: Unknown Command. Visit the QuartzCraft Wiki for help.
 Permissions:
    QCC.chat.*:
       description: Allows access to all QCC chat permissions.
