More settings and permissions

--- a/config.yml
+++ b/config.yml
@@ -11,5 +11,7 @@ database:
       password:
 settings:
    join-broadcast: false
+   primary-promote-command: pex user <user> group set <group>
+   secondary-promote-command: pex user <user> group add <group>
 
    
