Added phrase fallback options

--- a/config.yml
+++ b/config.yml
@@ -13,5 +13,6 @@ settings:
    join-broadcast: false
    primary-promote-command: pex user <user> group set <group>
    secondary-promote-command: pex user <user> group add <group>
+   phrase-fallback: false
 
    
