setPrimaryGroup() can now demote users too.

--- a/config.yml
+++ b/config.yml
@@ -12,6 +12,7 @@ database:
 settings:
    join-broadcast: false
    primary-promote-command: pex user <user> group set <group>
+   primary-promote-command: pex user <user> group remove <group>
    secondary-promote-command: pex user <user> group add <group>
    phrase-fallback: false #This doesn't actually change anything yet, just keep it at false.
 
