addSecondaryGroup now demotes users

--- a/config.yml
+++ b/config.yml
@@ -12,7 +12,8 @@ database:
 settings:
    join-broadcast: false
    primary-promote-command: pex user <user> group set <group>
-   primary-promote-command: pex user <user> group remove <group>
+   primary-demote-command: pex user <user> group set member
+   secondary-promote-command: pex user <user> group remove <group>
    secondary-promote-command: pex user <user> group add <group>
 
    
