--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 name: QuartzCore
-version: 1.0.3
+version: 1.0.3b
 author: The QuartzCraft Team! SoulPunisher, mba2012 and nfell2009!
 website: http://www.quartzcraft.co.uk/
 main: uk.co.quartzcraft.core.QuartzCore
