--- a/plugin.yml
+++ b/plugin.yml
@@ -36,18 +36,6 @@ commands:
       default: op
       permission-message: Unknown Command. Visit the QuartzCraft Wiki for help.
       alias: ch
-   report:
-      description: Report a rule breaker
-      usage: /report
-      permission: QCC.report
-      default: op
-      permission-message: Unknown Command. Visit the QuartzCraft Wiki for help.
-   promo:
-      description: Main promo command
-      usage: /promo
-      permission: QCC.promo
-      default: op
-      permission-message: Unknown Command. Visit the QuartzCraft Wiki for help.
    register:
       description: Begins the website registration process.
       usage: /register
@@ -91,3 +79,9 @@ Permissions:
    QCC.reload:
       description: Gives a player permission to perform the reload command.
       default: op
+   QCC.report:
+         description: Gives a player permission to perform the report command.
+         default: op
+   QCC.promo:
+            description: Gives a player permission to perform the promo command.
+            default: op
