--- a/config.yml
+++ b/config.yml
@@ -16,5 +16,9 @@ database:
       password:
 settings:
    join-broadcast: false
+   websync:
+      url: http://quartzcraft.co.uk/api.php
+      key: API_Key
+
 
    
