--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 name: QuartzCore
-version: 1.0.0
+version: 20140928a
 author: The QuartzCraft Team! SoulPunisher, mba2012 and nfell2009!
 website: http://quartzcraft.co.uk/
 main: uk.co.quartzcraft.core.QuartzCore
