--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: QuartzCore
 version: 20141217a
-author: The QuartzCraft Team! SoulPunisher, mba2012 and nfell2009!
+author: The QuartzCraft Team! mba2012 & nfell2009
 website: http://quartzcraft.co.uk/
 main: uk.co.quartzcraft.core.QuartzCore
 
