Basic server ID system and last seen on server

--- a/config.yml
+++ b/config.yml
@@ -10,6 +10,8 @@ database:
       username:
       password:
 settings:
+   database-connect: false
+   server-name:
    server-id:
    join-broadcast: false
    websync:
