Author and version updates

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: QuartzCore
-version: 20141229a
-author: The QuartzCraft Team! mba2012 & nfell2009
+version: 20150109a
+author: The QuartzCraft Team! mba2012, SoulPunisher & nfell2009
 website: http://quartzcraft.co.uk/
 main: uk.co.quartzcraft.core.QuartzCore
 
