--- a/plugin.yml
+++ b/plugin.yml
@@ -3,6 +3,7 @@ version: 20160322a
 author: The QuartzCraft Team! mba2012, SoulPunisher & nfell2009
 website: http://quartzcraft.co.uk/
 main: uk.co.quartzcraft.core.QuartzCore
+loadbefore: [QuartzKingdoms]
 
 commands:
    quartz:
